# SDLMorris

./: .gitignore  .gitmodules  CMakeLists.txt  Morris.sln  README.md  Untitled.xcf
MorrisGame/: MorrisGame.vcxproj  MorrisGame.vcxproj.filters
include/: test.h
include/MorrisGame/: MorrisCell.h  MorrisCellValue.h  MorrisField.h  MorrisGame.h  MorrisGameState.h  MorrisPlayerTurn.h
include/MorrisSDL/: ISDLSprite.h  SDLAnimatedSprite.h  SDLAudioLoader.h  SDLButton.h  SDLEliminationPanelView.h  SDLEndGamePanelView.h  SDLEvent.h  SDLMarkerView.h  SDLMarkerViewEliminatorController.h  SDLMarkerViewMode.h  SDLMarkerViewMover.h  SDLMorrisLogger.h  SDLScene.h  SDLSceneGame.h  SDLSceneMainMenu.h  SDLSprite.h  SDLTextureLoader.h  SDLWindow.h
src/: main.cpp
src/MorrisGame/: MorrisCell.cpp  MorrisField.cpp  MorrisGame.cpp  MorrisMarker.cpp
src/MorrisSDL/: SDLAnimatedSprite.cpp  SDLButton.cpp  SDLEliminationPanelView.cpp  SDLEndGamePanelView.cpp  SDLEvent.cpp  SDLMarkerView.cpp  SDLMarkerViewEliminatorController.cpp  SDLMarkerViewMover.cpp  SDLScene.cpp  SDLSceneGame.cpp  SDLSceneMainMenu.cpp  SDLSprite.cpp  SDLTextureLoader.cpp  SDLWindow.cpp
